--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,15 +9,17 @@
 body {
     font-family: "Space Grotesk", sans-serif;
     font-size: 1rem;
-    padding: 20px;
 }
 .nav{
     display: flex;
     justify-content: space-between;
+    align-content: center;
     position: sticky;
     top: 0px;
-    padding: 10px;
-    background-color: #ffffff9d;
+    padding: 20px 10px;
+    background-color: #ffffffc5;
+    box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+    z-index: 999;
     backdrop-filter: blur(20px);
 }
 /**Logo*/
@@ -100,6 +102,7 @@ body {
 
 .introduction{
     margin-top: 5rem;
+    padding: 20px;
     display: flex;
     gap: 30px;
 }
@@ -111,10 +114,11 @@ body {
 }
 
 .introduction__text h1{
-    font-size: clamp(1.25rem, 0.6875rem + 4vw, 3.5rem);
+    font-size: clamp(2.1rem, 0.6875rem + 4vw, 3.5rem);
+    width: 90%;
 }
 .introduction__text__img{
-    display: block;
+    display: none;
     img{
         width: 100%;
         height: auto;
@@ -173,13 +177,52 @@ body {
 }
 
 
+/* *Ads Section */
+
+.ads{
+    margin-top: 100px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
+    grid-template-rows: auto;
+    align-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.ads__items{
+    height: 50px;
+    align-content: center;
+    cursor: pointer;
+}
+.ads__items img{
+    width: 100%;
+    height: auto;
+    filter: grayscale(100);
+    transition: all .3s;
+}
+.ads__notion{
+    display: flex;
+    align-items: center;
+}
+.ads__notion img{
+    width: 25%;
+    align-self: center;
+}
+.ads__notion h3{
+    flex-basis: 50%;
+    font-size: clamp(1.7rem, 1.5rem + 1.0667vw, 2.5rem);
+    align-self: center;
+}
+
+.ads__items:hover img{
+    filter: grayscale(0);
+}
+/* ! Header Done */
 
 
 
 
-
-
-
+/* *    Main    */
 
 
 
@@ -194,6 +237,7 @@ body {
 
 
 @media (max-width:880px){
+    /* Navigation */
     .nav__menu{
         gap: 10px;
     }
@@ -205,6 +249,7 @@ body {
     }
 }
 
+
 @media (max-width:769px){
     
     .nav__menu{
@@ -212,6 +257,9 @@ body {
         right: 2%;
         flex-direction: column;
         padding: 10px 10px 35px 10px;
+    }
+    .nav__menu li{
+        display: none;
     }
     .burger__menu{
         display: block;
@@ -230,20 +278,40 @@ body {
         align-items: center;
         border-radius: 20px;
         border: 1px solid rgba(128, 128, 128, 0.534);
-        background: rgba(255, 255, 255, 0.952);
-        backdrop-filter: blur(10px);
+        background: rgb(255, 255, 255);
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.342);
-        z-index: 999;
-        
     }
     .burger__menu-checkbox:checked + .nav__menu .burger__menu{
         align-self: flex-end;
     }
+    .burger__menu-checkbox:checked + .nav__menu li{
+        display: inline;
+    }
+    .introduction__text__img{
+        display: block;
+        width: 70%;
+        align-self: center;
+    }
+    .introduction .introduction__text{
+        flex-basis: 100%;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 30px;
+    }
+    .introduction__text h1{
+        width: 90%;
+    }
+    .introduction__text__info-para{
+        width: 100%;
+    }
+    .introduction .introduction__img{
+        flex-basis: 0;
+        display: none;
+    }
+    /* *Responsive of Header */
 
 
-
-
-
+    
 }
 
 
