--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -265,6 +265,15 @@ body {
     box-shadow:  #191a23 0px 5px 1px;
     border: 1px solid #191a23;
     gap: 20px;
+    cursor: pointer;
+    scale: 1;
+    transition: scale 0.3s;
+}
+.services-container__card:hover{
+    scale: 1.1;
+}
+.services-container__card:hover .card__text-button img{
+    transform: rotate(30deg);
 }
 .services-container__card .card__text{
     display: flex;
@@ -348,10 +357,10 @@ body {
 
 
 .contact{
-    margin: 40px;
+    margin: 100px 40px;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
 }
 .contact__heading{
     display: flex;
@@ -359,6 +368,7 @@ body {
     gap: 30px;
 }
 .contact__heading h2{
+    font-size: 30px;
     padding: 2px 5px;
     background-color: #B9FF66;
     border-radius: 5px;
@@ -407,12 +417,6 @@ body {
 }
 
 
-
-
-
-
-
-
 .contact__form__imagine{
     width: 25%;
 }
@@ -422,12 +426,107 @@ body {
 
 
 
+footer{
+    padding: 40px;
+    margin: 40px 40px 0;
+    background-color: #191a23;
+    border-radius: 50px 50px 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: space-between;
+}
+.footer__nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__nav__logo{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+.footer__nav__logo img{
+    width: 30px;
+    height: 30px;
+}
+.footer__nav__logo h3{
+    font-size: 35px;
+    color: #fff;
+}
+.footer__nav__menu{
+    display: flex;
+    gap: 25px;
+}
+.footer__nav__menu a{
+    color: #fff;
+    text-decoration: underline;
+}
+.footer__nav__media {
+    display: flex;
+    gap: 10px;
+}
 
+.footer__contact{
+    display: flex;
+    justify-content: space-between;
+}
+.footer__contact__data{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.footer__contact__data h3{
+    font-size: 22px;
+    padding: 3px 5px;
+    background-color: #B9FF66;
+    border-radius: 10px;
+    width: max-content  ;
+}
+.footer__contact__data p, .footer__contact__data span{
+    color: #fff;
+}
+.footer__contact__data address span{
+    display: block;
+}
+.footer__contact__subscribe{
+    width: 55%;
+    background-color: #292a32;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 40px;
+}
+.footer__contact__subscribe input, .footer__contact__subscribe button{
+    width: 45%;
+    padding: 20px;
+    outline: none;
 
-
-
-
-
+    border-radius: 20px;
+    font-size: 18px;
+}
+.footer__contact__subscribe input{
+    background-color: #fff;
+    border: 1px solid #fff;
+}
+.footer__contact__subscribe button{
+    cursor: pointer;
+    background-color: #B9FF66;
+    border: 1px solid #B9FF66;
+}
+.footer__bottom{
+    display: flex;
+    gap: 50px;
+}
+.footer__bottom p, .footer__bottom a{
+    color: #fff;
+}
+.footer__bottom a{
+    font-weight: lighter;
+    text-decoration: underline;
+}
 
 
 @media (max-width:930px){
