fixed some problems and done

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,7 +13,7 @@ body {
 .nav{
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     position: fixed;
     width: 100%;
     top: 0px;
@@ -23,6 +23,7 @@ body {
     z-index: 999;
     backdrop-filter: blur(20px);
 }
+
 /**Logo*/
 .nav__logo img{
     max-width: 150px;
@@ -79,7 +80,7 @@ body {
 /**Nav menu*/
 .nav__menu{
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
     align-items: center;
 }
 .nav__menu .menu__items{
@@ -113,7 +114,7 @@ body {
     width: 35%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .introduction__text h1{
@@ -189,14 +190,14 @@ body {
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
     grid-template-rows: auto;
-    align-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 2.75rem;
 }
 .ads__items{
-    height: 50px;
+    height: 55px;
     align-content: center;
     cursor: pointer;
+    background-color: red;
 }
 .ads__items img{
     width: 100%;
@@ -235,8 +236,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    align-content: center;
-    gap: 40px;
+    gap: 2.5rem;
 }
 .services-heading h2{
     font-size: clamp(1.25rem, 0.9375rem + 1.6667vw, 2.5rem);
@@ -254,7 +254,7 @@ body {
     padding: 40px;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(390px, 1fr));
-    gap: 50px;
+    gap: 2.75rem;
     justify-content: center;
 }
 .services-container__card{
@@ -264,7 +264,7 @@ body {
     justify-content: space-between;
     box-shadow:  #191a23 0px 5px 1px;
     border: 1px solid #191a23;
-    gap: 20px;
+    gap: 1.25rem;
     cursor: pointer;
     scale: 1;
     transition: scale 0.3s;
@@ -290,7 +290,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 10px;
+    gap: 0.75rem;
 }
 
 .card__text-button a{
@@ -342,7 +342,6 @@ body {
     height: 300px;
     align-items: center;
     justify-content: space-around;
-    align-content: center;
 }
 .proposal__text h3{
     font-size: clamp(1rem, 0.75rem + 1.3333vw, 2rem);
@@ -360,12 +359,12 @@ body {
     margin: 100px 40px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.75rem;
 }
 .contact__heading{
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 1.75rem;
 }
 .contact__heading h2{
     font-size: 30px;
@@ -389,16 +388,16 @@ body {
     margin-left: 80px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.75rem;
 }
 .contact__form form label[for="choice"]{
     display: flex;
-    gap: 10px;
+    gap: 0.75rem;
 }
 :where(.contact__form form) label:not(#choice-lbl){
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 1rem;
 }
 #name, #email, #message{
 
@@ -409,7 +408,6 @@ body {
 }
 #message{
     height: 200px;
-    text-align: start;
     resize: none;
 }
 #message::placeholder{
@@ -433,7 +431,7 @@ footer{
     border-radius: 50px 50px 0 0;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.5rem;
     justify-content: space-between;
 }
 .footer__nav{
@@ -443,7 +441,7 @@ footer{
 }
 .footer__nav__logo{
     display: flex;
-    gap: 15px;
+    gap: 1rem;
     align-items: center;
 }
 .footer__nav__logo img{
@@ -456,7 +454,7 @@ footer{
 }
 .footer__nav__menu{
     display: flex;
-    gap: 25px;
+    gap: 1.3rem;
 }
 .footer__nav__menu a{
     color: #fff;
@@ -464,7 +462,7 @@ footer{
 }
 .footer__nav__media {
     display: flex;
-    gap: 10px;
+    gap: 0.75rem;
 }
 
 .footer__contact{
@@ -474,7 +472,7 @@ footer{
 .footer__contact__data{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.75rem;
 }
 .footer__contact__data h3{
     font-size: 22px;
@@ -496,20 +494,20 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 0.75rem;
     padding: 40px;
 }
 .footer__contact__subscribe input, .footer__contact__subscribe button{
     width: 45%;
     padding: 20px;
     outline: none;
-
     border-radius: 20px;
     font-size: 18px;
 }
 .footer__contact__subscribe input{
-    background-color: #fff;
+    background-color: #292a32;
     border: 1px solid #fff;
+    color: #fff;
 }
 .footer__contact__subscribe button{
     cursor: pointer;
@@ -518,7 +516,7 @@ footer{
 }
 .footer__bottom{
     display: flex;
-    gap: 50px;
+    gap: 2.75rem;
 }
 .footer__bottom p, .footer__bottom a{
     color: #fff;
@@ -536,7 +534,7 @@ footer{
         padding: 20px;
     }
     .nav__menu{
-        gap: 10px;
+        gap: 0.75rem;
     }
     .request_quote{
         padding: 3px 5px !important;
@@ -559,6 +557,7 @@ footer{
     .nav__menu li{
         display: none;
     }
+    
     .burger__menu{
         display: block;
     }
@@ -594,7 +593,7 @@ footer{
         flex-basis: 100%;
         align-items: flex-start;
         justify-content: center;
-        gap: 30px;
+        gap: 1.75rem;
     }
     .introduction__text h1{
         width: 90%;
@@ -654,6 +653,48 @@ footer{
         width: 100%;
     }
 
+
+    /* * Footer */
+    .footer__nav{
+       flex-direction: column; 
+       gap: 1.75rem;
+    }
+    .footer__nav__menu{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer__nav__menu a{
+        text-decoration: none;
+    }
+    .footer__contact{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.75rem;
+    }
+    .footer__contact__data{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer__contact__subscribe{
+        flex-direction: column;
+        width: 100%;
+        padding: 20px;
+        gap: 1.75rem;
+    }
+    .footer__contact__subscribe input, .footer__contact__subscribe button{
+        width: 100%;
+        padding: 15px;
+        font-size: 16px;
+    }
+    .footer__bottom{
+        flex-direction: column;
+        gap: 1.75rem;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer__bottom p{
+        font-size: 13px;
+    }
 }
-
-
